<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <data>
        <variable  name="recallItem"
            type="com.johngoodstadt.memorize.models.RecallItem" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.WordsOnlyWizard.WordsOnlyWizard3Fragment">


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@{recallItem.title}"
        android:background="@color/edit_text_background"
        android:padding="10dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <ImageView
        android:id="@+id/tickImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_ok"
        android:tint="@color/btnSelected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <TextView
        android:id="@+id/weAreAllSetTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/we_re_all_set"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tickImageView" />

    <TextView
        android:id="@+id/learnNowInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/learn_now_or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weAreAllSetTextView" />



    <EditText
        android:id="@+id/words"
        android:inputType="textMultiLine|none"
        android:text="@{recallItem.words}"
        android:layout_width="match_parent"
        android:gravity="top|left"
        android:padding="10dp"
        android:layout_marginTop="56dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="36dp"

        android:layout_height="0dp"
        android:background="@color/edit_text_background"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learnNowInfoTextView"
        app:layout_constraintBottom_toTopOf="@+id/btn_later"/>

    <Button
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/btn_later"
        android:layout_width="0dp"
        android:layout_margin="24dp"
        android:layout_height="wrap_content"
        android:text="@string/later"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_learn_now"
        app:layout_constraintHorizontal_bias="0.5"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_learn_now"
        android:layout_width="0dp"
        android:layout_margin="24dp"
        android:layout_height="wrap_content"
        android:text="@string/learn_now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/btn_later" />
</androidx.constraintlayout.widget.ConstraintLayout>

</layout>